# StudySprint2

./: .env  .env.example  .gitignore  DATABASE_API_REFERENCE.md  DB_QUICK_REFERENCE.md  LICENSE  README.md  README_STAGE3.2.md  STAGE2_COMPLETED.md  STAGE3_2_COMPLETION_CHECKLIST.md  docker-compose.yml
backend/: Dockerfile.dev  alembic.ini  create_migration.py  create_stage3_migration.py  docker-compose.dev.yml  fix_circular_imports.py  quick_test.py  requirements-dev.txt  requirements.txt  run_stage3_setup.py  stage3_status.py  start_dev.py  test_stage3_pdfs.py  test_stage3_topics.py  verify_setup.py
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  auth.py  pdfs.py  timer.py  topics.py
backend/app/config/: database.py  settings.py
backend/app/models/: __init__.py  consolidated.py
backend/app/schemas/: __init__.py  consolidated.py
backend/app/services/: auth_service.py  pdf_service.py  timer_service.py  topic_service.py  user_service.py
backend/app/utils/: crud_router.py
scripts/: setup-db.sh  setup-dev.sh  start.sh
studysprint-db/: .env  .env.example  .gitignore  PACKAGE_STRUCTURE.md  README.md  alembic.ini  pyproject.toml  requirements.txt  setup.py
studysprint-db/studysprint_db/: __init__.py  _version.py  cli.py
studysprint-db/studysprint_db/alembic/: env.py
studysprint-db/studysprint_db/config/: database.py  settings.py
studysprint-db/studysprint_db/models/: __init__.py  user.py
studysprint-db/studysprint_db/schemas/: __init__.py  user.py
studysprint-db/studysprint_db/tests/: test_config.py
studysprint-db/studysprint_db/utils/: mixins.py
